[package]
name = "daanio-tui-messages"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
daanio-config-types = { path = "../daanio-config-types" }
daanio-message-types = { path = "../daanio-message-types" }
daanio-session-types = { path = "../daanio-session-types" }
daanio-tui-markdown = { path = "../daanio-tui-markdown" }
ratatui = "0.30"
serde_json = "1"
