[package]
name = "daanio-tui-permissions"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "daanio_tui_permissions"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
crossterm = { version = "0.29", features = ["event-stream"] }
daanio-base = { path = "../daanio-base", default-features = false }
daanio-core = { path = "../daanio-core" }
daanio-tui-style = { path = "../daanio-tui-style" }
ratatui = "0.30"
serde_json = "1"
