[package]
name = "daanio-tui-session-picker"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
daanio-message-types = { path = "../daanio-message-types" }
daanio-session-types = { path = "../daanio-session-types" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
