[package]
name = "daanio-tui-visual-debug"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "daanio_tui_visual_debug"
path = "src/lib.rs"

[dependencies]
dirs = "5"
daanio-logging = { path = "../daanio-logging" }
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
