[package]
name = "daanio-tui"
version = "0.1.0"
edition = "2024"
publish = false

# Presentation layer for daanio: the terminal UI (`tui`) and the offline replay
# `video_export`, extracted out of the monolithic root `daanio` crate so they
# compile as a separate rustc unit. This crate builds on top of the application
# core (`daanio-app-core`) and re-exports it via `pub use daanio_app_core::*`, so
# every existing `crate::<module>` path (e.g. `crate::config`, `crate::server`)
# keeps resolving unchanged across the tui code that was moved here. The root
# `daanio` crate (cli + bin) in turn re-exports this crate via
# `pub use daanio_tui::*`.

[lib]
name = "daanio_tui"
path = "src/lib.rs"

[dependencies]
# Application core (server, agent, provider, auth, session, tool, config, ...).
# Re-exported via `pub use daanio_app_core::*` in lib.rs. default-features=false
# so this crate (and ultimately the root crate) controls app-core's features.
daanio-app-core = { path = "../daanio-app-core", default-features = false }

# Pure math kernels for the idle animations (3D samplers, glyph chooser,
# HSV->RGB). Pinned to opt-level = 3 in all profiles via workspace Cargo.toml so
# the hot trig loops stay optimized even in debug/selfdev builds.
daanio-tui-anim = { path = "../daanio-tui-anim" }

# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

# Utilities
anyhow = "1"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
similar = "2"
tempfile = "3"
open = "5"

# OAuth / hashing helpers used by the login + account UI
base64 = "0.22"
sha2 = "0.10"
rand = "0.9.3"
hex = "0.4"
url = "2"
urlencoding = "2"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
unicode-width = "0.2"

# Presentation-layer workspace crates
daanio-build-meta = { path = "../daanio-build-meta" }
daanio-logging = { path = "../daanio-logging" }
daanio-core = { path = "../daanio-core" }
daanio-fuzzy = { path = "../daanio-fuzzy" }
daanio-config-types = { path = "../daanio-config-types" }
daanio-selfdev-types = { path = "../daanio-selfdev-types" }
daanio-session-types = { path = "../daanio-session-types" }
daanio-provider-core = { path = "../daanio-provider-core" }
daanio-tui-markdown = { path = "../daanio-tui-markdown" }
daanio-tui-messages = { path = "../daanio-tui-messages" }
daanio-tui-core = { path = "../daanio-tui-core" }
daanio-tui-mermaid = { path = "../daanio-tui-mermaid" }
daanio-tui-account-picker = { path = "../daanio-tui-account-picker" }
daanio-tui-render = { path = "../daanio-tui-render" }
daanio-tui-visual-debug = { path = "../daanio-tui-visual-debug" }
daanio-tui-session-picker = { path = "../daanio-tui-session-picker", features = ["serde"] }
daanio-tui-style = { path = "../daanio-tui-style" }
terminal-colorsaurus = "1.0"
daanio-tui-permissions = { path = "../daanio-tui-permissions" }
daanio-tui-tool-display = { path = "../daanio-tui-tool-display" }
daanio-tui-usage-overlay = { path = "../daanio-tui-usage-overlay" }
daanio-terminal-image = { path = "../daanio-terminal-image" }
daanio-productivity-core = { path = "../daanio-productivity-core" }
daanio-tui-workspace = { path = "../daanio-tui-workspace" }

[features]
default = ["pdf", "embeddings", "bedrock"]
# Exposes bench-only debug helpers (e.g. debug_copy_selection_text_for_bench)
# consumed by the dev `tui_bench` binary in the root crate.
dev-bins = []
# Forwarded to app-core (and onward to daanio-base) so the root crate's feature
# set fully controls the optional stacks.
jemalloc = ["daanio-app-core/jemalloc"]
jemalloc-prof = ["daanio-app-core/jemalloc-prof"]
embeddings = ["daanio-app-core/embeddings"]
pdf = ["daanio-app-core/pdf"]
bedrock = ["daanio-app-core/bedrock"]
linux-compat-vendored-openssl = ["daanio-app-core/linux-compat-vendored-openssl"]
mmdr-size-api = ["daanio-tui-mermaid/mmdr-size-api"]
# Forwards the application core's `test-support` feature (and onward to
# daanio-base) so downstream crates' test targets can reach the whole stack's
# test helpers. Never enabled in normal (non-test) builds.
test-support = ["daanio-app-core/test-support"]

[dev-dependencies]
# Enables the downstream test-support helpers for *this* crate's own test
# target. Feature unification applies this only to test/bench/example builds.
daanio-app-core = { path = "../daanio-app-core", default-features = false, features = ["test-support"] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"
